--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Boris Budini
-  site_tagline: Kominoshe's mindscape
+  site_tagline: Kominoshja's mindscape
   favicon_image: /images/favicon.ico
 
 header_settings:
@@ -27,8 +27,8 @@ grid_settings:
   grid_spacing: 10
 
 social_settings:
-  facebook_url: 'https://www.facebook.com/kominoshja'
   twitter_url: 'https://twitter.com/kominoshja'
+  github_url: 'https://github.com/kominoshja/'
   instagram_url: 'https://www.instagram.com/kominoshja/'
   snapchat_url: ''
   youtube_url: ''
@@ -44,7 +44,6 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: 'https://github.com/kominoshja/'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
