--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,3 @@
-# This file is a template, and might need editing before it works on your project.
-# Template project: https://gitlab.com/pages/jekyll
-# Docs: https://docs.gitlab.com/ce/pages/
 image: ruby:2.3
 
 variables:
@@ -8,6 +5,12 @@ variables:
 
 before_script:
 - bundle install
+- mkdir events projects tech thoughts
+- mv pages/events.html events/index.html
+- mv pages/projects.html projects/index.html
+- mv pages/tech.html tech/index.html
+- mv pages/thoughts.html thoughts/index.html
+- rm -rf pages
 
 pages:
   stage: deploy
