--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,12 @@ before_script:
 - cp -R _events/ _posts
 - cp -R _projects/ _posts
 - cp -R _thoughts/ _posts
+- mkdir _events  _projects  _tech  _thoughts
+- mv blogposts/events/* _events/
+- mv blogposts/projects/* _projects/
+- mv blogposts/tech/* _tech/
+- mv blogposts/thoughts/* _thoughts
+
 pages:
   stage: deploy
   script:
