--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,16 +10,16 @@ before_script:
 - mv pages/projects.html projects/index.html
 - mv pages/tech.html tech/index.html
 - mv pages/thoughts.html thoughts/index.html
-- rm -rf pages
-- cp -R _tech/ _posts
-- cp -R _events/ _posts
-- cp -R _projects/ _posts
-- cp -R _thoughts/ _posts
 - mkdir _events  _projects  _tech  _thoughts
 - mv blogposts/events/* _events/
 - mv blogposts/projects/* _projects/
 - mv blogposts/tech/* _tech/
 - mv blogposts/thoughts/* _thoughts
+- cp -R _tech/ _posts
+- cp -R _events/ _posts
+- cp -R _projects/ _posts
+- cp -R _thoughts/ _posts
+- rm -rf pages/ blogposts/
 
 pages:
   stage: deploy
