--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,10 @@ before_script:
 - mv pages/tech.html tech/index.html
 - mv pages/thoughts.html thoughts/index.html
 - mkdir _events  _projects  _tech  _thoughts
-- mv blogposts/events/* _events/
-- mv blogposts/projects/* _projects/
-- mv blogposts/tech/* _tech/
-- mv blogposts/thoughts/* _thoughts
+- cp -R blogposts/events/ _events/
+- cp -R blogposts/projects/ _projects/
+- cp -R blogposts/tech/ _tech/
+- cp -R blogposts/thoughts/ _thoughts
 - cp -R _tech/ _posts
 - cp -R _events/ _posts
 - cp -R _projects/ _posts
