--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ markdown: kramdown
 kramdown:
   input: GFM
   syntax_highlighter: rouge
-  
+
 sass:
   style: compressed
 
@@ -79,7 +79,6 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-twitter-plugin
-
+  - jemoji
 paginate: 6
 paginate_path: "/blog/page:num/"
-  
