Fix dir for compress job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,14 @@ compress_images:
   image: alpine:latest
   script:
   - apk --no-cache add jpegoptim optipng
+  - mkdir .public
+  - cp -r * .public
+  - mv .public public
   - find public/ -iname '*.jpg' -print0 | xargs -0 jpegoptim --max=90 --preserve --totals
   - find public/ -iname '*.png' -print0 | xargs -0 optipng -o7 -preserve
-
+  artifacts:
+    paths:
+    - public
 pages:
   stage: deploy
   image: ruby:2.3
