Test artifact local build dir

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,10 @@ compress:
   - apk --no-cache add jpegoptim optipng
   - find . -iname '*.jpg' -print0 | xargs -0 jpegoptim --max=90 --preserve --totals
   - find . -iname '*.png' -print0 | xargs -0 optipng -o7 -preserve
-  
+  artifacts:
+    paths:
+    - .
+
   
 pages:
   stage: deploy
