--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ basic_settings:
   favicon_image: /images/favicon.ico
 
 header_settings:
-  logo_image: 
+  logo_image:
   logo_width: 200
   overlay_opacity: 0.7
 
@@ -12,8 +12,8 @@ menu_settings:
   menu_items:
     - title: 'About me'
       url: '/about'
-    - title: 'Portfolio'
-      url: '/portfolio/'
+#    - title: 'Portfolio'
+#      url: '/portfolio/'
     - title: 'Projects'
       url: '/projects/'
     - title: 'Tech'
