--- a/_config.yml
+++ b/_config.yml
@@ -80,5 +80,6 @@ plugins:
   - jekyll-feed
   - jekyll-twitter-plugin
   - jemoji
+  - jekyll-include-cache
 paginate: 6
 paginate_path: "/blog/page:num/"
