Change the title up

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,8 @@ pages:
   - rm -rf pages blogposts
   - bundle install
   - bundle exec jekyll build -d public
+  - sed -i 's/Boris Budini – Boris Budini/Boris Budini/' public/index.html
+
   dependencies:
     - compress_images
 
