--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Boris Budini
-description: A website where I post my projects
+description: DIY projects, system administration tips, broken code & more
 url: https://boris.budini.xyz
 site: Kominoshja's Mindscape
 twitter:
