--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ pages:
   - bundle install
   - bundle exec jekyll build -d public
   - sed -i 's/Boris Budini – Boris Budini/Boris Budini/' public/index.html
+  - sed -i 's/<div class=\"header-image header-image--on\" style=\"background-image: url(\/images\/Sidebar\/Tech\/router.jpg);\"><\/div>/<div class=\"header-image header-image--on\" style=\"background-image: url(\/images\/Sidebar\/index.jpg);\"><\/div>' public/index.html
   artifacts:
     paths:
     - public
