--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,9 +28,9 @@ grid_settings:
 
 social_settings:
   twitter_url: 'https://twitter.com/kominoshja'
-  github_url: 'https://github.com/kominoshja/'
   gitlab_url: 'https://git.budini.xyz/public'
-  instagram_url: 'https://www.instagram.com/kominoshja/'
+  mastodon_url: 'https://fosstodon.org/@kominoshja'
+  github_url: 'https://github.com/kominoshja/'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -53,7 +53,9 @@ social_settings:
   spotify_url: ''
   bandcamp_url: ''
   linkedin_url: ''
-  telegram_url: 'https://t.me/kominoshja'
+  telegram-plane_url: 'https://t.me/kominoshja'
+  instagram_url: 'https://www.instagram.com/kominoshja/'
+
 
 color_settings:
   background_color: '#ffffff'
