add algolia backend

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ variables:
   JEKYLL_ENV: production
 
 pages:
-  stage: deploy
   image: ruby:2.3
   script:
   - mkdir events projects tech thoughts
@@ -20,8 +19,10 @@ pages:
   - cp -R _thoughts/ _posts
   - rm -rf pages blogposts
   - bundle install
+  - ALGOLIA_API_KEY='bd44fc55419463cd69eb8097450564a4' bundle exec jekyll algolia
   - bundle exec jekyll build -d public
   - sed -i 's/Boris Budini – Boris Budini/Boris Budini/' public/index.html
+
   #to be fixed
   - sed -i '0,/\/images\/Sidebar\/Tech\/router.jpg/{s/\/images\/Sidebar\/Tech\/router.jpg/\/images\/Sidebar\/index.jpg/}' public/index.html
   - sed -i '0,/\/images\/Sidebar\/Tech\/router.jpg/{s/\/images\/Sidebar\/Tech\/router.jpg/\/images\/Sidebar\/404.jpg/}' public/404.html
