What's with ajax?

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,7 +23,7 @@ menu_settings:
     - title: 'Thoughts'
       url: '/thoughts/'
     - title: 'Search'
-      url: '/search/'
+      url: 'https://boris.budini.xyz/search'
 grid_settings:
   grid_spacing: 10
 
