--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ plugins:
 
 paginate: 6
 paginate_path: "/blog/page:num/"
-
+ajax_loading: false
 algolia:
   application_id: 1KGN2Y8AB1
   index_name: jekyll
