--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 basic_settings:
   site_title: Boris Budini
   site_tagline: Kominoshja's mindscape
-  favicon_image: /images/favicon.ico
+  favicon_image: /images/favicon.ico?{{site.time | date: '%s%N'}}
 
 header_settings:
   logo_image:
@@ -48,7 +48,7 @@ color_settings:
   error_color: '#D64541'
 
 font_settings:
-  font_embed: '<link href="/css/font.css" rel="stylesheet">'
+  font_embed: '<link href="/css/font.css?{{site.time | date: '%s%N'}}" rel="stylesheet">'
   title_font: '"Merriweather", sans-serif'
   body_font: '"Muli", sans-serif'
   regular_weight: 400
