--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ variables:
 pages:
   image: kominoshja/jekyll-page:v1.1
   script:
-  - mkdir events projects tech thoughts
+  - mkdir events projects tech thoughts _posts
   - mv pages/events.html events/index.html
   - mv pages/projects.html projects/index.html
   - mv pages/tech.html tech/index.html
@@ -13,10 +13,10 @@ pages:
   - mv blogposts/projects/ _projects
   - mv blogposts/tech/ _tech
   - mv blogposts/thoughts/ _thoughts
-  - cp -R _tech/ _posts
-  - cp -R _events/ _posts
-  - cp -R _projects/ _posts
-  - cp -R _thoughts/ _posts
+  - cp -R _tech/* _posts
+  - cp -R _events/* _posts
+  - cp -R _projects/* _posts
+  - cp -R _thoughts/* _posts
   - rm -rf pages blogposts
   - bundle exec jekyll build -d public
   - sed -i 's/Boris Budini – Boris Budini/Boris Budini/' public/index.html
