Gotta keep the links alive

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ collections:
     permalink: /:name
   posts:
     output: true
-    permalink: /blog/:categories/:slug
+    permalink: /:categories/:slug
 
 defaults:
   -
